Fix typo
Signed-off-by: davik <davik@anyscale.com>